Refactor project-related fields in task handling
- Updated property names from "project" to "projectName" across various test files and application properties for consistency.
- Adjusted logging configuration by removing the WARN level for "edu.stanford.nlp".
- Modified ProjectCreationTest to reflect the new projectName field in assertions.
- Enhanced TaskGraphServiceTest to utilize TaskRequest and TaskDTO for task creation.
- Introduced TaskMapperTest to validate the mapping between Task and TaskDTO.
- Updated TaskProjectIntegrationTest to align with the new projectName field.
- Cleaned up TaskResourceTest by removing unnecessary task state tests and reordering existing tests for better clarity.